tests/baselines/reference/classExtendsInterface_not.errors.txt
//// [tests/cases/compiler/classExtendsInterface_not.ts] ////

classExtendsInterface_not.ts(1,20): error TS2339: Property 'bogus' does not exist on type '""'.


==== classExtendsInterface_not.ts (1 errors) ====
    class C extends "".bogus {}
                       ~~~~~
!!! error TS2339: Property 'bogus' does not exist on type '""'.
    